[#19] Add alert flag for user.

--- a/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/addUserForm.vm
+++ b/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/addUserForm.vm
@@ -269,6 +269,14 @@
             </td>
         </tr>
 
+        <tr>
+            <td><label for="alertFlag">$i18n.getString("alert")</label> </td>
+
+            <td>
+                <input type="checkbox" name="alertFlag" value="true">
+            </td>
+        </tr>
+
 
     </table>
 
