--- a/dhis-2/dhis-web/dhis-web-validationrule/src/main/webapp/dhis-web-validationrule/addValidationRuleForm.vm
+++ b/dhis-2/dhis-web/dhis-web-validationrule/src/main/webapp/dhis-web-validationrule/addValidationRuleForm.vm
@@ -44,7 +44,7 @@
 		<td>
 			<select type="text" id="additionalRuleType" name="additionalRuleType" onchange="changeAdditionalRuleType()">
 				<option value="Default" selected="selected">default</option>
-				<option value="SarampoCaseInMonths">Sarampo: Cases in recent ( A ) month/months > ( B )</option>
+				<option value="SarampoCaseInMonths">Sarampo: Cases in recent ( A ) week/weeks > ( B )</option>
 				<option value="MeningiteIncreasedInWeeks">Meningite: Cases increases by ( A ) times in last ( B ) weeks</option>
 				<option value="DiarrieaCaseInYears">Disenteria: Cases > average for same week in past ( A ) years + ( B ) * std dev</option>
 				<option value="MalariaCaseInYears">Malária: Cases > average from current week + ( A ) weeks to current week - ( B ) weeks in past ( C ) years + ( D ) * std dev</option>
@@ -55,7 +55,7 @@
         <td><label for="additionalRule">$i18n.getString( "additional rule" ) <span class="tipText">($i18n.getString( "visible_in_default_rule_type" ))</span></label></td>
         <td>
 			<textarea name="additionalRule" id="additionalRuleText"></textarea>
-			<a href="javascript:getHelpContent('additionalRules')" title="Help"><i class="fa fa-question-circle"></i></a>
+			<a id="additionalRuleHelp" title="Help"><i class="fa fa-question-circle"></i></a>
 		</td>
     </tr>
 
