[#20] Add user permission function.

--- a/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/allUser.vm
+++ b/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/allUser.vm
@@ -44,8 +44,10 @@
 					<td>
 						#filterDiv( "alluser" )
 					</td>
-					<td colspan="3" style="text-align:right">
-						<input type="button" value="$i18n.getString( 'add_new' )" onclick="window.location.href='showAddUserForm.action'"/>
+					<td id="allUserAddNew" colspan="3" style="text-align:right" >
+						<input type="button" value="$i18n.getString( 'add_new' )"
+							#if ($users.get(0).getSurname() != "admin") style="display: none" #end
+                               onclick="window.location.href='showAddUserForm.action'"/>
 					</td>
 				</tr>
 				<tr>
