--- a/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/user.vm
+++ b/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/user.vm
@@ -29,7 +29,8 @@
 			<table width='100%'>
 				<tr>
 					<td>#filterDiv( "user" )</td>
-					<td colspan="3" style="text-align:right"><input type="button" value="$i18n.getString( 'add_new' )" onclick="window.location.href='showAddUserForm.action'"/></td>
+					<td id="specificUserAddNew" colspan="3" style="text-align:right"><input type="button" value="$i18n.getString( 'add_new' )"
+																	onclick="window.location.href='showAddUserForm.action'"/></td>
 				</tr>
 			</table>
 			<table class="listTable" id="userList" width='100%'>
