[#17] Add sms alert in add/update user pages.

--- a/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/addUserForm.vm
+++ b/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/addUserForm.vm
@@ -270,10 +270,17 @@
         </tr>
 
         <tr>
-            <td><label for="alertFlag">$i18n.getString("alert")</label> </td>
+            <td><label for="emailAlert">$i18n.getString("email_alert")</label> </td>
 
             <td>
-                <input type="checkbox" name="alertFlag" value="true">
+                <input type="checkbox" name="emailAlert" value="true">
+            </td>
+        </tr>
+        <tr>
+            <td><label for="smsAlert">$i18n.getString("sms_alert")</label> </td>
+
+            <td>
+                <input type="checkbox" name="smsAlert" value="true">
             </td>
         </tr>
 
