[#] - change group id to group uid

--- a/dhis-2/dhis-web/dhis-web-validationrule/src/main/webapp/dhis-web-validationrule/runValidationForm.vm
+++ b/dhis-2/dhis-web/dhis-web-validationrule/src/main/webapp/dhis-web-validationrule/runValidationForm.vm
@@ -37,12 +37,12 @@
     <tr>
     	<td>
     		<label for="validationRuleGroup">$i18n.getString( "validation_rule_group" )</label>
-	    </td>
+	    </td>u
 	    <td>
 	    	<select id="validationRuleGroupId" name="validationRuleGroupId" style="width:20em">
 	    		<option value="-1">[ $i18n.getString( "all_validation_rules" ) ]</option>
 	    		#foreach( $group in $validationRuleGroups )
-	    			<option value="$group.id">$encoder.htmlEncode( $group.name )</option>
+	    			<option value="$group.uid">$encoder.htmlEncode( $group.name )</option>
 		    	#end
             </select>
     	</td>
