--- a/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/addUserForm.vm
+++ b/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/addUserForm.vm
@@ -45,30 +45,6 @@
                 }
         );
 
-        $.ajax({
-            url: "../api/24/userRoles",
-            type: "GET",
-            dataType: 'json',
-            success: function (data) {
-                $.each(data.userRoles, function () {
-                    var id = "";
-                    if (this.displayName.toString() == "data_viewer") {
-                        id = "data_viewer_id";
-                    }
-                    else {
-                        id = "superuser_id";
-                    }
-                    document.getElementById(id).value = this.id.toString();
-
-                });
-
-            },
-            error: function (er) {
-                console.log(er);
-            }
-        });
-
-
         checkValueIsExist("username", "validateUser.action");
 //    checkValueIsExist("openId", "validateUser.action");
 //    checkValueIsExist("ldapId", "validateUser.action");
@@ -263,8 +239,15 @@
                                                                         class="required">*</em></label></td>
             <td>
                 <select id="urSelected" name="urSelected" class="valid">
-                    <option id="data_viewer_id" selected="selected">data_viewer</option>
-                    <option id="superuser_id">supseruser</option>
+                #set($isSelected = false)
+                #foreach( $userRole in $allUserAuthorityGroups)
+                    #if ($userRole.isSuper() or $isSelected)
+                        <option id="$userRole.name" value="$userRole.uid">$!encoder.htmlEncode( $userRole.name )</option>
+                    #elseif (!$isSelected)
+                        <option id="$userRole.name" value="$userRole.uid" selected="selected">$!encoder.htmlEncode( $userRole.name )</option>
+                        #set($isSelected = true)
+                    #end
+                #end
                 </select>
             </td>
         </tr>
