--- a/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/updateUserForm.vm
+++ b/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/updateUserForm.vm
@@ -75,30 +75,6 @@
                 }
         );
 
-        $.ajax({
-            url: "../api/24/userRoles",
-            type: "GET",
-            dataType: 'json',
-            success: function (data) {
-                $.each(data.userRoles, function () {
-                    var id = "";
-                    if (this.displayName.toString() == "data_viewer") {
-                        id = "data_viewer_id";
-                    }
-                    else {
-                        id = "superuser_id";
-                    }
-                    document.getElementById(id).value = this.id.toString();
-
-                });
-
-            },
-            error: function (er) {
-                console.log(er);
-            }
-        });
-
-
         //checkValueIsExist("openId", "validateUser.action", { id: $userCredentials.id});
 
         ouwtSelected = selection.getSelected();
@@ -301,8 +277,14 @@
                                                                         class="required">*</em></label></td>
             <td>
                 <select id="urSelected" name="urSelected" class="valid">
-                    <option id="data_viewer_id" #if ($userAuthorityGroups.get(0).name == "data_viewer") selected="selected" #end>data_viewer</option>
-                    <option id="superuser_id" #if ($userAuthorityGroups.get(0).name == "Superuser") selected="selected" #end>supseruser</option>
+                #foreach( $userRole in $allUserAuthorityGroups)
+                    #if ($userRole.uid == $userAuthorityGroups.get(0).uid)
+                        <option id="$userRole.name" value="$userRole.uid" selected="selected">$!encoder.htmlEncode( $userRole.name )</option>
+                    #else
+                        <option id="$userRole.name" value="$userRole.uid">$!encoder.htmlEncode( $userRole.name )</option>
+                        #set($isSelected = true)
+                    #end
+                #end
                 </select>
             </td>
         </tr>
