--- a/dhis-2/dhis-web/dhis-web-validationrule/src/main/webapp/dhis-web-validationrule/addValidationRuleForm.vm
+++ b/dhis-2/dhis-web/dhis-web-validationrule/src/main/webapp/dhis-web-validationrule/addValidationRuleForm.vm
@@ -44,10 +44,10 @@
 		<td>
 			<select type="text" id="additionalRuleType" name="additionalRuleType" onchange="changeAdditionalRuleType()">
 				<option value="Default" selected="selected">default</option>
-				<option value="SarampoCaseInMonths">Sarampo: Cases in recent ( A ) week/weeks > ( B )</option>
-				<option value="MeningiteIncreasedInWeeks">Meningite: Cases increases by ( A ) times in last ( B ) weeks</option>
-				<option value="DiarrieaCaseInYears">Disenteria: Cases > average for same week in past ( A ) years + ( B ) * std dev</option>
-				<option value="MalariaCaseInYears">Malária: Cases > average from current week + ( A ) weeks to current week - ( B ) weeks in past ( C ) years + ( D ) * std dev</option>
+				<option value="SarampoCaseInMonths">$i18n.getString("customed_validation_rule_Sarampo")</option>
+				<option value="MeningiteIncreasedInWeeks">$i18n.getString("customed_validaiton_rule_Meningite")</option>
+				<option value="DisenteriaCaseInYears">$i18n.getString("customed_validation_rule_malaria")</option>
+				<option value="MalariaCaseInYears">$i18n.getString("customed_validation_rule_disenteria")</option>
 			</select>
 		</td>
 	</tr>
