--- a/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/addUserForm.vm
+++ b/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/addUserForm.vm
@@ -13,8 +13,7 @@
 
 <script type="text/javascript">
     var ouwtSelected = [];
-    var i18n_data_capture_org_unit_required = '$encoder.jsEscape( $i18n.getString(
-        "data_capture_organisation_unit_required_for_user" ) , "'" )';
+    var i18n_data_capture_org_unit_required = '$encoder.jsEscape( $i18n.getString("data_capture_organisation_unit_required_for_user" ) , "'" )';
 
     jQuery(function () {
         validation2('addUserForm', function (form) {
